# diplomacy_cicero

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
fairdiplomacy/selfplay/cc/: CMakeLists.txt
